<resources>
    <string name="app_name">Scoreboard App</string>
    <string name="title_name">Scoreboard App</string>
    <string name="win_team">Winning Team</string>
    <string name="add_one">Add +1</string>
    <string name="add_two">Add +2</string>
    <string name="add_three">Add +3</string>
    <string name="email">Email Id -</string>
    <string name="password">Password -</string>
    <string name="description">-----SCOREBOARD APP-----</string>
</resources>
